--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,9 +1,14 @@
 version: 0.1
 
 phases:
-  build:
+  install:
     commands:
       - npm install
+  pre_build:
+    commands:
+      - npm test
+  build:
+    commands:
       - npm run webpack
 artifacts:
   files:
