--- a/package.json
+++ b/package.json
@@ -19,21 +19,20 @@
     "url": "https://github.com/nicholaslp/portfolio/issues"
   },
   "homepage": "https://github.com/nicholaslp/portfolio#readme",
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.25.0",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "jest": "^21.2.1",
-    "react-test-renderer": "^16.0.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
-  },
-  "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "enzyme-adapter-react-15": "^1.0.1",
+    "jest": "^20.0.4",
+    "react-test-renderer": "^15.6.1",
+    "webpack": "^3.0.0"
   }
 }
