--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test-watch":"jest --watch",
+    "test-watch": "jest --watch",
     "webpack": "webpack",
     "webpack-watch": "webpack --watch",
     "dev": "webpack-dev-server --port 3000"
@@ -34,6 +34,7 @@
     "enzyme-adapter-react-15": "^1.0.1",
     "jest": "^20.0.4",
     "react-test-renderer": "^15.6.1",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.9.3"
   }
 }
